faire la premier simulation avec Leaflet

--- a/transport_api/templates/index.html
+++ b/transport_api/templates/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Teset gRCP</h1>
+    <a href="http://localhost:8000/api/simulate/">simulation</a>
+    <a href="http://localhost:8000/api/simulate-traffic-zones/">simulate per zones</a>
     <a href="http://localhost:8000/api/best-itinerary/?origin=Casa&destination=Rabat">test 1</a>
     <a href="http://localhost:8000/api/predict-traffic/?origin=Casa&destination=Rabat&datetime=2025-05-08T08:00">test 2</a>
     <a href="http://localhost:8000/api/list-transports/?zone=Casa">test 13</a>
